<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:qlink="http://schemas.android.com/apk/res/com.deange.quicklink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <com.deange.quicklink.ui.misc.TextFontView
        android:id="@+id/dialog_about_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textAppearance="?android:attr/textAppearanceLarge"
        qlink:ql_fontName="@string/font_roboto_light" />

    <com.deange.quicklink.ui.misc.TextFontView
        android:id="@+id/dialog_about_developer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_developer_name"
        qlink:ql_fontName="@string/font_roboto_light" />

    <com.deange.quicklink.ui.misc.TextFontView
        android:id="@+id/dialog_about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/about_app_description"
        qlink:ql_fontName="@string/font_roboto_light" />

</LinearLayout>